<resources>
    <string name="app_name">Five Pro Test Task</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sing_in">Sing in</string>
    <string name="tips">TIPS</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
</resources>