<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_personal"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_personal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_user_surname"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:background="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="@+id/user_surname_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_surname_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_surname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/image_user_surname"
                app:layout_constraintTop_toBottomOf="@id/textView">

                <TextView
                    android:id="@+id/user_surname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="start"
                    android:text="@string/surname"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_surname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_surname" />

                <ImageView
                    android:id="@+id/image_view_surname"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/user_surname_text"
                    app:layout_constraintTop_toBottomOf="@+id/user_surname_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/image_user_name"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:background="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="@+id/user_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_name_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/image_user_surname"
                app:layout_constraintTop_toBottomOf="@id/user_surname_layout">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name" />

                <ImageView
                    android:id="@+id/image_view_name"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/user_name_text"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/image_user_phone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:background="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@+id/user_phone_layout"
                app:layout_constraintEnd_toStartOf="@+id/user_phone_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_phone_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_phone_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/image_user_name"
                app:layout_constraintTop_toBottomOf="@id/user_name_layout">

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="start"
                    android:text="@string/phone"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_phone" />

                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/user_phone_text"
                    app:layout_constraintTop_toBottomOf="@+id/user_phone_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>